2012-10-12  Zan Dobersek  <zandobersek@gmail.com>

        [TestResultServer] Add support for non-Chromium TestExpectations files
        https://bugs.webkit.org/show_bug.cgi?id=98422

        Reviewed by Ojan Vafai.

        Loads TestExpectations files for several other non-Chromium ports, parses them and
        properly distributes them per various platforms.

        * TestResultServer/static-dashboards/dashboard_base.js: g_expectations is replaced by
        g_expectationsByPlatform, an object that holds raw TestExpectations file contents for
        various platforms.
        (requestExpectationsFiles): First traverses through the platforms tree to gather all
        the TestExpectations files that should be loaded, then loads them in parallel.
        (appendJSONScriptElements):
        * TestResultServer/static-dashboards/flakiness_dashboard.js: The platforms tree is reorganized
        to describe each platform and possible subplatforms plainly yet in detail. The PLATFORM_FALLBACKS
        object is removed as it's not used anywhere. g_allTestsByPlatformAndBuildType is now filled by
        traversing the platforms tree.
        (traversePlatformsTree.traverse):
        (traversePlatformsTree): A helper function that traverses the platforms tree, invoking
        callback on each leaf node.
        (determineWKPlatform): A helper function to determine whether the builder is running WebKit1 or
        WebKit2 layer of a given platform.
        (chromiumPlatform): Chromium-specific platforms are now properly prefixed with 'CHROMIUM_'.
        (TestTrie): A new class that holds all the tests in a trie. The trie is constructed by iterating
        through the tests for each builder, adding each test to the trie.
        (TestTrie.prototype.forEach.traverse):
        (TestTrie.prototype.forEach): A helper function that traverses the tests trie, invoking callback on each leaf.